Lint and prevent docker container from exiting

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.class
 *.log
 .idea
-spark-docker/spark-job-sample/project/
-spark-docker/spark-job-sample/target/
+*project/
+*target/
 *.iml
+
+.metals/
