--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5442:5432"
+  
+  spark:
+    image: sfps-spark
+    ports:
+      - "8080:8080"
 
   # db_loader:
   #   ...
