--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,22 @@ services:
     image: sfps-spark
     ports:
       - "8080:8080"
+    volumes:
+      - "exchange:/exchange"
+  
+  server:
+    image: sfps-server
+    ports:
+      - "8088:8088"
+    volumes:
+      - "exchange:/exchange"
 
-  # db_loader:
+volumes:
+
+  exchange:
+    driver: local
+     
+  # db_loader: 
   #   ...
   #   links:
   #     - db
