--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     image: sfps-dbloader
     volumes:
       - "exchange:/exchange"
+      - "./data:/data"
     depends_on:
       - db
 
@@ -39,4 +40,3 @@ services:
 volumes:
   exchange:
     driver: local
-
