Run dockerized server directly from source

--- a/spark-docker/Dockerfile
+++ b/spark-docker/Dockerfile
@@ -16,31 +16,24 @@ ENV PATH $PATH:$JAVA_HOME/bin
 
 #Solución muy lenta (al menos por ahora que estoy construyendo la imagen a cada rato. L.)
 # SBT
-#ENV SBT_VERSION 1.2.8
-#RUN \
-#  curl -L -o sbt-$SBT_VERSION.deb https://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb && \
-#  dpkg -i sbt-$SBT_VERSION.deb && \
-#  rm sbt-$SBT_VERSION.deb && \
-#  apt-get update && \
-#  apt-get install sbt && \
-#  sbt sbtVersion
+ENV SBT_VERSION 1.2.8
+RUN \
+ curl -L -o sbt-$SBT_VERSION.deb https://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb && \
+ dpkg -i sbt-$SBT_VERSION.deb && \
+ rm sbt-$SBT_VERSION.deb && \
+ apt-get update && \
+ apt-get install sbt && \
+ sbt sbtVersion
 
+ENV SCALA_VERSION 2.12.8
+ENV SCALA_TARBALL https://downloads.lightbend.com/scala/2.12.8/scala-2.12.8.deb
+RUN curl -sSL $SCALA_TARBALL -o scala.deb && \
+    dpkg -i scala.deb
 
-# SPARK
-ARG SPARK_ARCHIVE=https://archive.apache.org/dist/spark/spark-2.4.2/spark-2.4.2-bin-hadoop2.6.tgz
-ENV SPARK_HOME /usr/local/spark-2.4.2-bin-hadoop2.6
+#COPY ./target/scala-2.12/http4s-server-assembly-1.0.jar /server.jar
+COPY . .
 
-ENV PATH $PATH:${SPARK_HOME}/bin
-RUN curl -s ${SPARK_ARCHIVE} | tar -xz -C /usr/local/
+EXPOSE 8088
 
-WORKDIR $SPARK_HOME
-
-COPY ./xgboost-trainer/target/scala-2.12/trainer-assembly-1.0.jar /jobs/spark-trainer.jar
-COPY ./scripts/start.sh /scripts/start.sh
-RUN chmod 777 /scripts/*
-
-# Spark Web UI and history monitoring
-EXPOSE 8080
-EXPOSE 18080
-
-ENTRYPOINT ["/bin/bash", "-c", "/scripts/start.sh"]
+#ENTRYPOINT ["scala", "/server.jar"] #DOES NOT WORK.
+ENTRYPOINT ["sbt", "server/run"]
